--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Stack Cards</title>
-    <link href="css/stack_cards.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/stack.cards.jquery.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/set-cards.css" rel="stylesheet" type="text/css" media="all">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/stack_cards.js"></script>
+    <script type="text/javascript" src="js/stack.cards.jquery.js"></script>
 </head>
 <body>
     <style type="text/css">
@@ -42,21 +43,43 @@
                 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, iure, iusto quia aliquid impedit est ipsa adipisci. Iusto, itaque, nesciunt, perferendis architecto consequuntur dolorem earum distinctio natus ut laboriosam labore.
             </p>
         </div> -->
-        <div><img src="http://placekitten.com/250/130" alt=""></div>
+
+
+        <!-- <div><img src="http://placekitten.com/250/130" alt=""></div>
         <div><img src="http://placekitten.com/180/130" alt=""></div>
         <div><img src="http://placekitten.com/200/130" alt=""></div>
         <div><img src="http://placekitten.com/235/130" alt=""></div>
-        <div><img src="http://placekitten.com/260/130" alt=""></div>
+        <div><img src="http://placekitten.com/260/130" alt=""></div> -->
+
+        <div class="card club-1"></div>
+        <div class="card club-jack"></div>
+        <div class="card club-queen"></div>
+        <div class="card club-king"></div>
+        <div class="card club-2"></div>
+        <div class="card club-3"></div>
+        <div class="card club-4"></div>
+        <div class="card club-5"></div>
+        <div class="card club-6"></div>
+        <div class="card club-7"></div>
+        <div class="card club-8"></div>
+        <div class="card club-9"></div>
+        <div class="card club-10"></div>
     </div>
 
 
     <script type="text/javascript">
     $("#example").stackCards({
-        enableOpacity: true,
-        clickCard: function(card, active){
+        enableOpacity: false,
+        enableRotation: true,
+        width: 600,
+        height: 600,
+        clickCard: function($card, active){
             console.log("click card custum !");
-            console.log(card);
+            console.log($card);
             console.log(active);
+
+            if(active)
+                $card.remove();
         }
     });
     </script>
